src/styles/homePage.scss
@import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark&display=swap');

h1 {
  margin: 1rem 0 2rem 0;
}
body {
  margin: 0;
}

.waves {
  position: relative;
  width: 100%;
  height: 200px;
  margin-bottom: -7px; /*Fix for safari gap*/
  min-height: 200px;
  max-height: 250px;
}


.waves2 {
  position: relative;
  width: 120%;
  height: 70px;
  margin-bottom: -7px; /*Fix for safari gap*/
  min-height: 70px;
  max-height: 250px;
}

.waves3 {
  position: relative;
  width: 120%;
  height: 80px;
  margin-bottom: -7px; /*Fix for safari gap*/
  min-height: 80px;
  max-height: 80px;
}

.wave-bot {
  width: 100%;
  height: 500px;
  background: rgb(87, 136, 160, .9);
  margin-top: 7px;
  z-index: 20;
}

// titles
.titles {
  .strokeText {
    left: 0;
    position: relative;
    color: rgba(250, 201, 46, 1);
    z-index: 4;
    font-size: 125px;
  }
  .strokeText::before {
      content: attr(data-storke);
      position: absolute;
      z-index: -1;
      -webkit-text-stroke: 14px #425673;
      text-stroke: 14px #425673;
  }
}

/* Animation */
.parallax > use {
  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
}
.parallax > use:nth-child(1) {
  animation-delay: -2s;
  animation-duration: 7s;
}
.parallax > use:nth-child(2) {
  animation-delay: -3s;
  animation-duration: 10s;
}
.parallax > use:nth-child(3) {
  animation-delay: -4s;
  animation-duration: 13s;
}
.parallax > use:nth-child(4) {
  animation-delay: -5s;
  animation-duration: 20s;
}

.iframe {
  margin-top: 20px;
  width: 100%;
  height: 400px;
}

@keyframes move-forever {
  0% {
    transform: translate3d(-90px, 0, 0);
  }
  100% {
    transform: translate3d(85px, 0, 0);
  }
}
/*Shrinking for mobile*/
@media (max-width: 768px) {

  .dashboard {
    min-height: 100vh;
  }

  .waves {
    height: 100px;
    min-height: 100px;
  }

  h1 {
    font-size: 24px;
  }

  // titles
  .titles {
    .strokeText {
      font-size: 64px;
    }
  }

  .sun {
    .sun-content {
      width: 372px;
      height: 372px;
      border-radius: 50%;
      background-color: rgba(255, 229, 201, 1);
  
    }
  }

  .iframe {
    margin-top: 20px;
    width: 100%;
    height: 300px;
  }

}

